# maya-cloth-sim

./: CMakeLists.txt  README.md  clothsim.py  main.py
cmake/modules/: FindMaya.cmake
src/: HelloWorld.cc  HelloWorld.hh  clothsim.py  helloWorld.py
